[gd_scene load_steps=33 format=3 uid="uid://b5lf8oxoojqrf"]

[ext_resource type="Texture2D" uid="uid://csxpi5utiufwu" path="res://assets/Enemy_Galore_I/Boss/GolemBoss/PNG sheet/Character_sheet.png" id="1_anol0"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/golem_boss.gd" id="1_p7hqg"]
[ext_resource type="Texture2D" uid="uid://coly087pdqtyg" path="res://assets/Enemy_Galore_I/Boss/GolemBoss/weapon PNG/Laser_sheet.png" id="2_j1oot"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/FiniteStateMachine.gd" id="4_m1br4"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/Idle.gd" id="5_y1bxr"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/Follow.gd" id="6_xfuu3"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/MeleeAttack.gd" id="7_kaa0x"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/HomingMissile.gd" id="8_0re3t"]
[ext_resource type="PackedScene" path="res://scenes/Enemy/bullet.tscn" id="9_wcn8u"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/LaserBeam.gd" id="10_k2tw5"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/ArmorBuff.gd" id="11_oh8g7"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/Dash.gd" id="12_2lrij"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/Death.gd" id="13_f80si"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/boss/FireBlast.gd" id="14_5xacc"]
[ext_resource type="PackedScene" path="res://scenes/Enemy/fire_blast.tscn" id="15_7t07u"]
[ext_resource type="PackedScene" path="res://scenes/Enemy/electric_ball.tscn" id="16_0g573"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/Damageable.gd" id="17_g2y7q"]

[sub_resource type="Animation" id="Animation_2na5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_76tmt"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n2d1s"]
resource_name = "block"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_labjd"]
resource_name = "boss_slained"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gbl4m"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3jgs3"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n4imi"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2xnm8"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}

[sub_resource type="Animation" id="Animation_dfxp2"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tqpmo"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_edt81"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h7gsv"]
_data = {
"RESET": SubResource("Animation_2na5v"),
"armor_buff": SubResource("Animation_76tmt"),
"block": SubResource("Animation_n2d1s"),
"boss_slained": SubResource("Animation_labjd"),
"death": SubResource("Animation_gbl4m"),
"glowing": SubResource("Animation_3jgs3"),
"idle": SubResource("Animation_n4imi"),
"laser": SubResource("Animation_2xnm8"),
"laser_cast": SubResource("Animation_dfxp2"),
"melee_attack": SubResource("Animation_tqpmo"),
"ranged_attack": SubResource("Animation_edt81")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_djhip"]
radius = 18.0
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0xqwb"]
radius = 100.0

[sub_resource type="GDScript" id="GDScript_ou1wo"]
script/source = "extends BossState

@export var ball_node: PackedScene
var can_transition: bool = false

func enter():
	super.enter()
	animation_player.play(\"ranged_attack\")
	await animation_player.animation_finished
	shoot()
	can_transition = true
 
func shoot():
	var bullet = ball_node.instantiate()
	bullet.position = owner.position
	get_tree().current_scene.add_child(bullet)

func transition():
	if can_transition:
		can_transition = false
		get_parent().change_state(\"Dash\")
"

[node name="GolemBoss" type="CharacterBody2D"]
position = Vector2(321, 185)
collision_layer = 8
collision_mask = 2
script = ExtResource("1_p7hqg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(1.62, 1.59)
texture = ExtResource("1_anol0")
hframes = 10
vframes = 10

[node name="pivot" type="Node2D" parent="."]
position = Vector2(2, -17)

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
position = Vector2(98, 15)
texture = ExtResource("2_j1oot")
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h7gsv")
}
autoplay = "idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -27.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_left = 36.0
offset_top = -29.0
offset_right = 177.0
offset_bottom = -6.0
text = "The Last Guardian
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -76.0
offset_right = 145.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Boss Slained"

[node name="debug" type="Label" parent="."]
offset_left = -21.0
offset_top = -45.0
offset_right = 19.0
offset_bottom = -22.0
theme_override_font_sizes/font_size = 8
text = "debug"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 4)
shape = SubResource("CapsuleShape2D_djhip")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_0xqwb")
debug_color = Color(0.702901, 0.272611, 1, 0.42)

[node name="Damageable" type="Node" parent="."]
script = ExtResource("17_g2y7q")
health = 250.0

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("4_m1br4")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_y1bxr")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_xfuu3")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_kaa0x")

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_0re3t")
bullet_node = ExtResource("9_wcn8u")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_k2tw5")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_oh8g7")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_2lrij")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_f80si")

[node name="FireBlast" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_5xacc")
blast_node = ExtResource("15_7t07u")

[node name="ElectricBall" type="Node2D" parent="FiniteStateMachine"]
script = SubResource("GDScript_ou1wo")
ball_node = ExtResource("16_0g573")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="timeout" from="Timer" to="FiniteStateMachine/Follow" method="_on_timer_timeout"]
